# hh_searcher

./: example_api.py  main.py  pyproject.toml
src/: abstract_container.py  api_client.py  hh_api_client.py  json_saver.py  paths.py  vacancy.py  vacancy_base.py  vacancy_container.py  vacancy_saver.py
tests/: conftest.py  test_hh_api_client.py  test_json_saver.py  test_vacancy.py  test_vacancy_container.py
